syntax = "proto3";
option go_package = "github.com/viperadnan-git/go-gpm/internal/pb";

message AddMediaToAlbum {
  repeated string media_keys = 1;
  string album_media_key = 2;
  Field5Type field5 = 5;
  DeviceInfo device_info = 6;
  int64 timestamp = 7;

  message Field5Type { int64 field1 = 1; }
  message DeviceInfo {
    string model = 3;
    string make = 4;
    int64 android_api_version = 5;
  }
}

message DeleteAlbum {
  string album_media_key = 1;
}
